--- a/frontend/src/scss/components/_ordersList.scss
+++ b/frontend/src/scss/components/_ordersList.scss
@@ -62,5 +62,6 @@
   .orders-list-items {
     justify-content: flex-start;
     overflow: auto;
+    width: 95vw;
   }
 }
