--- a/frontend/src/scss/layout/_global-rules.scss
+++ b/frontend/src/scss/layout/_global-rules.scss
@@ -78,6 +78,10 @@ table {
     border-radius: 10px;
     overflow: hidden;
   }
+  td {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
 }
 
 
@@ -113,6 +117,7 @@ table {
       display: block;
       font-size: .8em;
       text-align: right;
+      white-space: normal;
     }
     td::before {
       content: attr(data-label);
@@ -160,11 +165,13 @@ table {
 
   // tabels
   table {
+    width: 95vw;
     td {
       border-bottom: 1px solid #ddd;
       display: block;
       font-size: .8em;
       text-align: right;
+      white-space: normal;
     }
     td::before {
       content: attr(data-label);
