--- a/frontend/src/scss/pages/Dashboard/dashboard.scss
+++ b/frontend/src/scss/pages/Dashboard/dashboard.scss
@@ -70,8 +70,8 @@
     }
     .sections {
       margin-left: 0px;
-      padding: 1em;
-      width: 90vw;
+      width: 95vw;
+      padding: 1em 0;
     }
   }
 }
